# openpager

./: Cargo.toml
.cargo/: config.toml
src/: input.rs  main.rs
src/display/: framebuffer.rs  mod.rs  window.rs
src/platform/: desktop.rs  device.rs  mod.rs  render.rs
src/ui/: colors.rs  menu.rs  mod.rs  statusbar.rs
src/ui/icons/: battery.rs
