[package]
name = "openpager"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"

[target.'cfg(target_arch = "mips")'.dependencies]
framebuffer = "0.3"

[target.'cfg(not(target_arch = "mips"))'.dependencies]
minifb = "0.28"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
