[package]
name = "openpager"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"

[target.'cfg(target_arch = "mips")'.dependencies]

[target.'cfg(not(target_arch = "mips"))'.dependencies]
minifb = "0.28"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
